[qutebrowser] Fix readability font selection

--- a/dot_local/share/user-content.css
+++ b/dot_local/share/user-content.css
@@ -6,6 +6,10 @@ body.mono-as-fuck /* Slay all other other serif devils. */
     font-family: "JetBrains Mono" !important;
 }
 
+body.qute-readability * {
+    font-family: "IBM Plex Serif" !important;
+}
+
 body.gl-platform-linux, body.env-production.page-responsive {
     div.js-pipeline-graph .gl-text-truncate {
         overflow: unset !important;
